addEventListener functionality added to scheme interpreter

--- a/webextension/popup/extension.html
+++ b/webextension/popup/extension.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="extension.css"/>
   </head>
 <body>
-  <div class="button scheme">Scheme</div>
+  <div class="button scheme" id="schemebutton">Scheme</div>
 </body>
 <script src="extension.js"></script>
 </html>
